@@ -164,7 +164,7 @@ android {
     }
 
     dexOptions {
-        javaMaxHeapSize "2g"
+        javaMaxHeapSize "3g"
     }
 
     defaultConfig {
@@ -275,7 +275,6 @@ android {
     testOptions { 
          unitTests.all {
              maxHeapSize '1g'
-             jvmArgs '-XX:MaxPermSize=512m'
          }
     }
 }
